fix: override height of slider on mobile screen

--- a/src/style.scss
+++ b/src/style.scss
@@ -35,7 +35,8 @@
 	}
 
 	@media screen and (max-width: 675px) {
-		height: 77vh !important;
+		min-height: 300px !important;
+		height: 80vh !important;
 	}
 }
 
